src/test/ui/rfc-2632-const-trait-impl/const-trait-bound-opt-out/feature-gate.gated.stderr
error: `?const` on trait bounds is not yet implemented
  --> $DIR/feature-gate.rs:11:29
   |
LL | const fn get_assoc_const<S: ?const T>() -> i32 { <S as T>::CONST }
   |                             ^^^^^^^^

error: aborting due to previous error

